decode_chips function: use threshold=32 to simply return the closest match

--- a/python_phy/test_802154.ipynb
+++ b/python_phy/test_802154.ipynb
@@ -9,55 +9,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "def count_set_bits(n: int, bits: int) -> int:\n",
+    "def count_set_bits(n: int, bits: int = 32) -> int:\n",
     "    \"\"\"Return the number of set bits in the lowest 'bits' of 'n'.\"\"\"\n",
     "    mask = (1 << bits) - 1  # Create a mask for the lowest 'bits' bits\n",
     "    return bin(n & mask).count(\"1\")\n",
     "\n",
     "\n",
     "print(\n",
-    "    count_set_bits(0b0100_1110_0000_0111_0111_1010_1110_0110, 32)\n",
+    "    count_set_bits(0b0100_1110_0000_0111_0111_1010_1110_0110, 4)\n",
     ")  # Counts bits in the lowest 4 bits (0110) → Output: 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diff_bits = 15\n",
-      "diff_bits = 3\n",
+      "diff_bits = 12\n",
+      "diff_bits = 12\n",
+      "diff_bits = 11\n",
       "diff_bits = 12\n",
       "diff_bits = 13\n",
-      "diff_bits = 14\n",
-      "diff_bits = 17\n",
-      "diff_bits = 16\n",
-      "diff_bits = 16\n",
-      "diff_bits = 15\n",
-      "diff_bits = 27\n",
+      "diff_bits = 12\n",
+      "diff_bits = 13\n",
+      "diff_bits = 13\n",
+      "diff_bits = 18\n",
+      "diff_bits = 18\n",
+      "diff_bits = 19\n",
       "diff_bits = 18\n",
       "diff_bits = 17\n",
-      "diff_bits = 16\n",
-      "diff_bits = 13\n",
-      "diff_bits = 14\n",
-      "diff_bits = 14\n",
-      "test_variable = 1\n"
+      "diff_bits = 18\n",
+      "diff_bits = 17\n",
+      "diff_bits = 17\n",
+      "test_variable = 2\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
     "MAX_PKT_LEN: int = 127\n",
     "\n",
     "\n",
-    "def decode_chips(chips32: int, threshold: int) -> int:\n",
+    "def decode_chips(chips32: int, threshold: int = 32) -> int:\n",
     "    \"\"\"Decodes the received chip sequence by comparing it against a known mapping.\"\"\"\n",
     "    best_match = 0xFF\n",
     "    min_threshold = 33  # Value greater than the maximum possible errors (32 bits)\n",
@@ -106,13 +106,13 @@
     "            min_threshold = diff_bits\n",
     "\n",
     "    if min_threshold <= threshold:\n",
-    "        return best_match & 0xF  # Return the lower 4 bits of the best matching symbol\n",
+    "        return best_match & 0xF  # Return position in chip mapping\n",
     "\n",
-    "    # If no valid match was found, return 0xFF to indicate an error.\n",
-    "    return 0xFF\n",
+    "    return 0xFF  # If no valid match was found, return 0xFF to indicate an error.\n",
     "\n",
     "\n",
-    "test_variable = decode_chips(0b0100_1110_0000_0111_0111_1011_1111_1110, 3)\n",
+    "# Use threshold = 32 to simply find the closest match!\n",
+    "test_variable = decode_chips(0b0111_1110_1111_1111_1111_1111_1111_1111, 32)\n",
     "print(f\"{test_variable = }\")"
    ]
   }
