--- a/python_phy/test_802154.ipynb
+++ b/python_phy/test_802154.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,24 +65,26 @@
     "import numpy as np\n",
     "\n",
     "# Chip mapping for MSK-based IEEE 802.15.4 demodulation\n",
+    "# Important: sequences are inverted bit-wise. The LSB of each uint32 number\n",
+    "# is the last chip sent on air\n",
     "CHIP_MAPPING: np.ndarray = np.array(\n",
     "    [\n",
-    "        0x6077AE6C,  # 0\n",
-    "        0x4E077AE6,  # 1\n",
+    "        0xE077AE6C,  # 0\n",
+    "        0xCE077AE6,  # 1\n",
     "        0x6CE077AE,  # 2\n",
-    "        0x66CE077A,  # 3\n",
-    "        0x2E6CE077,  # 4\n",
+    "        0xE6CE077A,  # 3\n",
+    "        0xAE6CE077,  # 4\n",
     "        0x7AE6CE07,  # 5\n",
     "        0x77AE6CE0,  # 6\n",
-    "        0x077AE6CE,  # 7\n",
+    "        0x877AE6CE,  # 7\n",
     "        0x1F885193,  # 8\n",
     "        0x31F88519,  # 9\n",
-    "        0x131F8851,  # 10\n",
-    "        0x1931F885,  # 11\n",
-    "        0x51931F88,  # 12\n",
-    "        0x051931F8,  # 13\n",
-    "        0x0851931F,  # 14\n",
-    "        0x78851931,  # 15\n",
+    "        0x931F8851,  # A\n",
+    "        0x1931F885,  # B\n",
+    "        0x51931F88,  # C\n",
+    "        0x851931F8,  # D\n",
+    "        0x8851931F,  # E\n",
+    "        0x78851931,  # F\n",
     "    ],\n",
     "    dtype=np.uint32,\n",
     ")\n",
@@ -112,8 +114,39 @@
     "\n",
     "\n",
     "# Use threshold = 32 to simply find the closest match!\n",
+    "# Use low threshold for preamble detection and length reading\n",
+    "# Use high threshold for payload (we are sure we received a IEEE 802.15.4 packet, but may be interfered during the payload)\n",
     "test_variable = decode_chips(0b0111_1110_1111_1111_1111_1111_1111_1111, 32)\n",
     "print(f\"{test_variable = }\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11100000011101111010111001101100_11100000011101111010111001101100_11100000011101111010111001101100_11100000011101111010111001101100_11100000011101111010111001101100_11100000011101111010111001101100_11100000011101111010111001101100_11100000011101111010111001101100_10000111011110101110011011001110_10010011000111111000100001010001\n"
+     ]
+    }
+   ],
+   "source": [
+    "def map_nibbles_to_chip_string(byte_array: list[int], chip_mapping: np.ndarray) -> str:\n",
+    "    result = []\n",
+    "    for byte in byte_array:\n",
+    "        for nibble in [byte & 0x0F, (byte >> 4) & 0x0F]:  # Extract LSB first, then MSB\n",
+    "            mapped_value = chip_mapping[nibble]\n",
+    "            binary_string = f\"{mapped_value:032b}\"  # Convert to 32-bit binary\n",
+    "            result.append(binary_string)  # Append delimiter\n",
+    "    return \"_\".join(result)\n",
+    "\n",
+    "\n",
+    "# Example usage:\n",
+    "byte_array = [0x00, 0x00, 0x00, 0x00, 0xA7]\n",
+    "print(map_nibbles_to_chip_string(byte_array, CHIP_MAPPING))"
    ]
   }
  ],
