jupyter notebook: testing np.array to uint32 conversion

--- a/python_phy/test_802154.ipynb
+++ b/python_phy/test_802154.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -34,30 +34,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diff_bits = 12\n",
-      "diff_bits = 12\n",
-      "diff_bits = 11\n",
-      "diff_bits = 12\n",
+      "diff_bits = 15\n",
       "diff_bits = 13\n",
+      "diff_bits = 14\n",
+      "diff_bits = 13\n",
+      "diff_bits = 0\n",
+      "diff_bits = 13\n",
+      "diff_bits = 14\n",
       "diff_bits = 12\n",
-      "diff_bits = 13\n",
-      "diff_bits = 13\n",
-      "diff_bits = 18\n",
-      "diff_bits = 18\n",
-      "diff_bits = 19\n",
-      "diff_bits = 18\n",
+      "diff_bits = 15\n",
       "diff_bits = 17\n",
+      "diff_bits = 16\n",
+      "diff_bits = 17\n",
+      "diff_bits = 30\n",
+      "diff_bits = 17\n",
+      "diff_bits = 16\n",
       "diff_bits = 18\n",
-      "diff_bits = 17\n",
-      "diff_bits = 17\n",
-      "test_variable = 2\n"
+      "test_variable = 4\n"
      ]
     }
    ],
@@ -116,13 +116,13 @@
     "# Use threshold = 32 to simply find the closest match!\n",
     "# Use low threshold for preamble detection and length reading\n",
     "# Use high threshold for payload (we are sure we received a IEEE 802.15.4 packet, but may be interfered during the payload)\n",
-    "test_variable = decode_chips(0b0111_1110_1111_1111_1111_1111_1111_1111, 32)\n",
+    "test_variable = decode_chips(0b10101110_01101100_11100000_01110111, 32)\n",
     "print(f\"{test_variable = }\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -147,6 +147,62 @@
     "# Example usage:\n",
     "byte_array = [0x00, 0x00, 0x00, 0x00, 0xA7]\n",
     "print(map_nibbles_to_chip_string(byte_array, CHIP_MAPPING))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0b10101110011011001110000001110111\n",
+      "diff_bits = 15\n",
+      "diff_bits = 13\n",
+      "diff_bits = 14\n",
+      "diff_bits = 13\n",
+      "diff_bits = 0\n",
+      "diff_bits = 13\n",
+      "diff_bits = 14\n",
+      "diff_bits = 12\n",
+      "diff_bits = 15\n",
+      "diff_bits = 17\n",
+      "diff_bits = 16\n",
+      "diff_bits = 17\n",
+      "diff_bits = 30\n",
+      "diff_bits = 17\n",
+      "diff_bits = 16\n",
+      "diff_bits = 18\n",
+      "test_variable = 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def chips_to_nibble(chips_slice: np.ndarray) -> int:\n",
+    "    # Build a 32-bit integer from the chip slice.\n",
+    "    shift_reg = 0\n",
+    "    max_chips = 32\n",
+    "    mask = (1 << max_chips) - 1\n",
+    "    for chip in range(max_chips):\n",
+    "        shift_reg = ((shift_reg << 1) | (chips_slice[chip] & 0x1)) & mask\n",
+    "\n",
+    "    return shift_reg\n",
+    "\n",
+    "\n",
+    "def chips_to_int(chips: np.ndarray) -> int:\n",
+    "    \"\"\"Convert a 32-length binary array to an integer.\"\"\"\n",
+    "    assert len(chips) == 32, \"Input must be exactly 32 bits long\"\n",
+    "    return int(\"\".join(map(str, chips)), 2)\n",
+    "\n",
+    "\n",
+    "chips = np.array([1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1])\n",
+    "result = chips_to_int(chips)\n",
+    "print(bin(result))\n",
+    "\n",
+    "test_variable = decode_chips(0b10101110_01101100_11100000_01110111, 32)\n",
+    "print(f\"{test_variable = }\")"
    ]
   }
  ],
