use amplitude argument in multiply_by_complex_exponential

--- a/python_phy/subtraction_test.ipynb
+++ b/python_phy/subtraction_test.ipynb
@@ -351,8 +351,10 @@
     }
    ],
    "source": [
-    "ready_to_subtract = multiply_by_complex_exponential(delayed_interference, fs, freq=4800, phase=found_phase)\n",
-    "ready_to_subtract = pad_interference(iq_samples, ready_to_subtract, max_idx) * estimated_amplitude\n",
+    "ready_to_subtract = multiply_by_complex_exponential(\n",
+    "    delayed_interference, fs, freq=4800, phase=found_phase, amplitude=estimated_amplitude\n",
+    ")\n",
+    "ready_to_subtract = pad_interference(iq_samples, ready_to_subtract, max_idx)\n",
     "subtracted = iq_samples - ready_to_subtract\n",
     "subplots_iq([iq_samples, ready_to_subtract, subtracted], fs, [\"Interfered packet\", \"Interference\", \"Subtracted\"])\n",
     "\n",
