carrier frequency brute search accepts ranges as well as lists

--- a/python_phy/subtraction_test.ipynb
+++ b/python_phy/subtraction_test.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
    ],
    "source": [
     "subtracted = subtract_interference_wrapper(\n",
-    "    affected=iq_samples, interference=iq_samples_interference, fs=fs, freq_offsets=[4600, 4700, 4800, 4900, 5000]\n",
+    "    affected=iq_samples, interference=iq_samples_interference, fs=fs, freq_offsets=range(4600, 5100, 100)\n",
     ")\n",
     "subplots_iq([iq_samples, ready_to_subtract, subtracted], fs, [\"Interfered packet\", \"Interference\", \"Subtracted\"])\n",
     "\n",
