BLE modulation: sort functions

--- a/python_phy/modulation_prototype.ipynb
+++ b/python_phy/modulation_prototype.ipynb
@@ -10,11 +10,13 @@
     "import matplotlib.pyplot as plt\n",
     "import scipy\n",
     "\n",
-    "from packet_utils import compute_crc, ble_whitening, generate_access_code_ble\n",
+    "from packet_utils import generate_access_code_ble, create_ble_phy_packet, unpack_uint8_to_bits\n",
+    "from filters import gaussian_fir_taps, modulate_bits_fir\n",
     "\n",
     "# payload -> packet (bytes)(whitened) DONE\n",
     "# bytes -> bits DONE\n",
-    "# bits -> IQ"
+    "# bits -> IQ DONE\n",
+    "# Encapsulate the process in a class"
    ]
   },
   {
@@ -39,49 +41,11 @@
     }
    ],
    "source": [
-    "def create_packet(payload: np.ndarray, base_address: int) -> np.ndarray:\n",
-    "    \"\"\"\n",
-    "    Create a physical BLE packet from payload and base address.\n",
-    "\n",
-    "    Packet Structure:\n",
-    "    ┌───────────┬──────────────┬───────────────┬───────────┬────────┬────────┬─────────┐\n",
-    "    │ Preamble  │ Base Address │ Prefix (0x00) │ S0 (0x00) │ Length │ PDU    │ CRC     │\n",
-    "    ├───────────┼──────────────┼───────────────┼───────────┼────────┼────────┼─────────┤\n",
-    "    │ 0xAA/0x55 │ 4 bytes      │ 1 byte        │ 1 byte    │ 1 byte │ 0–255B │ 3 bytes │\n",
-    "    └───────────┴──────────────┴───────────────┴───────────┴────────┴────────┴─────────┘\n",
-    "    \"\"\"\n",
-    "    # Set the preamble based on the LSB of the base address\n",
-    "    preamble = np.uint8(0x55 if (base_address & 0x01) else 0xAA)\n",
-    "\n",
-    "    # Convert base address into 4 bytes in little-endian order\n",
-    "    base_addr_len = 4\n",
-    "    base_addr_bytes = np.array(\n",
-    "        [np.uint8((base_address >> (i * 8)) & 0xFF) for i in range(base_addr_len)],\n",
-    "        dtype=np.uint8,\n",
-    "    )\n",
-    "\n",
-    "    # Set prefix, S0 and length bytes\n",
-    "    prefix = np.uint8(0x00)\n",
-    "    s0 = np.uint8(0x00)\n",
-    "    length = np.uint8(len(payload))\n",
-    "\n",
-    "    # Append CRC\n",
-    "    ready_for_crc = np.concatenate(([s0, length], payload))\n",
-    "    crc = compute_crc(ready_for_crc, crc_init=0x00FFFF, crc_poly=0x00065B, crc_size=3)\n",
-    "    ready_for_whitening = np.concatenate((ready_for_crc, crc))\n",
-    "\n",
-    "    # Whiten from S0 to CRC\n",
-    "    whitened, _ = ble_whitening(ready_for_whitening)\n",
-    "    packet = np.concatenate(([preamble], base_addr_bytes, [prefix], whitened))\n",
-    "\n",
-    "    return packet\n",
-    "\n",
-    "\n",
     "# Example values:\n",
     "base_address = 0x12345678\n",
     "payload = np.array([0xAB, 0xCD], dtype=np.uint8)\n",
     "\n",
-    "packet = create_packet(payload, base_address)\n",
+    "packet = create_ble_phy_packet(payload, base_address)\n",
     "print(\"Packet bytes:\")\n",
     "print([hex(byte) for byte in packet])"
    ]
@@ -110,17 +74,10 @@
     }
    ],
    "source": [
-    "def unpack_uint8_to_bits(uint8_array: np.ndarray) -> np.ndarray:\n",
-    "    \"\"\"Unpack an array of bytes (np.uint8) into an array of bits, LSB firt\"\"\"\n",
-    "    # Unpack bits from each byte into a matrix where each row is the binary representation\n",
-    "    bits = np.unpackbits(uint8_array).reshape(-1, 8)\n",
-    "    bits = bits[:, ::-1]  # LSB first as sent on air\n",
-    "    return bits.flatten()\n",
-    "\n",
-    "\n",
     "unpacked = unpack_uint8_to_bits(packet)\n",
     "print(\"Unpacked bits:\", unpacked)\n",
     "\n",
+    "# For comparison (I'm sure this function works)\n",
     "print(generate_access_code_ble(base_address=base_address))"
    ]
   },
@@ -133,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -158,28 +115,21 @@
     }
    ],
    "source": [
-    "def gaussian_taps(sps: int, ntaps: int, bt: float, gain: float = 1.0) -> np.ndarray:\n",
-    "    \"\"\"Generate Gaussian FIR filter taps\"\"\"\n",
-    "    s = np.sqrt(np.log(2.0)) / (2 * np.pi * bt)  # Scaling factor for time based on BT (bandwidth-bit period product)\n",
-    "    t = np.linspace(-(ntaps - 1) / 2, (ntaps - 1) / 2, ntaps)  # Symmetric time indices around zero\n",
-    "    taps = np.exp(-(t**2) / (2 * (sps * s) ** 2))  # Gaussian function\n",
-    "    return gain * taps / np.sum(taps)  # Normalise and apply gain\n",
-    "\n",
-    "\n",
-    "# -------------------------\n",
-    "# Set parameters\n",
     "sps = 10  # Samples per symbol\n",
     "bt = 0.5  # Bandwidth-bit period product (BLE PHY specification)\n",
-    "transmission_rate = 1e6  # BLE 1 Mb/s\n",
-    "fs = transmission_rate * sps  # Sampling rate\n",
-    "ntaps = sps  # Number of FIR taps\n",
     "\n",
-    "# -------------------------\n",
     "# Generate Gaussian taps and convolve with rectangular window\n",
-    "gauss_response = gaussian_taps(sps, ntaps, bt)\n",
+    "gauss_response = gaussian_fir_taps(sps=sps, ntaps=sps, bt=bt)\n",
     "convolved_response = scipy.signal.convolve(gauss_response, np.ones(sps))\n",
     "\n",
-    "# -------------------------\n",
+    "# Create a test bit sequence\n",
+    "bits = np.array([0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0])\n",
+    "\n",
+    "# Use the modulate_bits function to get the filtered (modulated) data.\n",
+    "# modulated_data = modulate_bits_fir(bits, sps, gauss_response)\n",
+    "modulated_data = modulate_bits_fir(bits, fir_taps=convolved_response, sps=sps)\n",
+    "\n",
+    "\n",
     "# Plot the results\n",
     "fig, axs = plt.subplots(2, 1, figsize=(10, 8))\n",
     "\n",
@@ -189,7 +139,7 @@
     "axs[0].set_xlabel(\"Tap index\")\n",
     "axs[0].set_ylabel(\"Amplitude\")\n",
     "\n",
-    "# 3. Plot the convolved response\n",
+    "# 2. Plot the convolved response\n",
     "axs[1].stem(convolved_response)\n",
     "axs[1].set_title(\"Convolved Response (Gaussian taps * Rectangular window)\")\n",
     "axs[1].set_xlabel(\"Sample index\")\n",
@@ -199,28 +149,6 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "def modulate_bits_fir(bits, sps, fir_taps) -> np.ndarray:\n",
-    "    \"\"\"Modulates a bit sequence by\n",
-    "    1. Upsampling according to samples per symbol (sps).\n",
-    "    2. Filtering with an FIR filter defined by the FIR taps (fir_taps).\n",
-    "    \"\"\"\n",
-    "    # Upsample\n",
-    "    upsampled_bits = np.zeros(len(bits) * sps)\n",
-    "    upsampled_bits[::sps] = bits * 2 - 1  # (-1 to 1)\n",
-    "\n",
-    "    # Apply FIR filtering and crop at the end (sps - 1) samples\n",
-    "    return scipy.signal.convolve(upsampled_bits, fir_taps, mode=\"full\")[: -sps + 1]\n",
-    "\n",
-    "\n",
-    "# Create a test bit sequence\n",
-    "bits = np.array([0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0])\n",
-    "\n",
-    "# Use the modulate_bits function to get the filtered (modulated) data.\n",
-    "# modulated_data = modulate_bits_fir(bits, sps, gauss_response)\n",
-    "modulated_data = modulate_bits_fir(bits, sps, convolved_response)\n",
-    "\n",
-    "\n",
-    "# -------------------------\n",
     "# Plot the modulated data\n",
     "plt.figure(figsize=(10, 4))\n",
     "plt.plot(modulated_data, marker=\"o\", linestyle=\"-\")\n",
@@ -241,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +206,7 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "modulated_data = modulate_bits_fir(bits, sps, half_sine_pulse)\n",
+    "modulated_data = modulate_bits_fir(bits, fir_taps=half_sine_pulse, sps=sps)\n",
     "\n",
     "# -------------------------\n",
     "# Plot the modulated data\n",
