802154 modulator: from byte packet to I and Q chips

--- a/python_phy/802154_modulation_prototype.ipynb
+++ b/python_phy/802154_modulation_prototype.ipynb
@@ -10,12 +10,11 @@
     "import matplotlib.pyplot as plt\n",
     "import scipy\n",
     "\n",
-    "from packet_utils import create_802154_phy_packet\n",
+    "from packet_utils import create_802154_phy_packet, map_nibbles_to_chips, split_iq_chips\n",
     "from filters import gaussian_fir_taps\n",
-    "from demodulation import demodulate_frequency\n",
-    "from modulation import pulse_shape_bits_fir, modulate_frequency\n",
-    "from transmitter import TransmitterBLE\n",
-    "from receiver import ReceiverBLE\n",
+    "from modulation import pulse_shape_bits_fir\n",
+    "from transmitter import Transmitter802154\n",
+    "from receiver import Receiver802154\n",
     "\n",
     "# IEEE 802.15.4\n",
     "# payload -> packet (bytes)\n",
@@ -48,7 +47,6 @@
      "output_type": "stream",
      "text": [
       "Packet bytes:\n",
-      "[  0   0   0   0 167   4 171 205 190  86]\n",
       "['0x0', '0x0', '0x0', '0x0', '0xa7', '0x4', '0xab', '0xcd', '0xbe', '0x56']\n"
      ]
     }
@@ -60,8 +58,92 @@
     "\n",
     "packet = create_802154_phy_packet(payload, append_crc=append_crc)\n",
     "print(\"Packet bytes:\")\n",
-    "print(packet)\n",
     "print([hex(byte) for byte in packet])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Packet bytes -> chips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0xd9c3522e', '0xd9c3522e', '0xd9c3522e', '0xd9c3522e', '0xd9c3522e', '0xd9c3522e', '0xd9c3522e', '0xd9c3522e', '0x9c3522ed', '0x7b8c9607', '0x522ed9c3', '0xd9c3522e', '0x77b8c960', '0x7b8c9607', '0x6077b8c9', '0x77b8c96', '0x96077b8c', '0x77b8c960', '0xc3522ed9', '0x3522ed9c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Chip mapping for IEEE 802.15.4 O-QPSK DSSS encoding\n",
+    "chip_mapping: np.ndarray = np.array(\n",
+    "    [\n",
+    "        0xD9C3522E,  # 0\n",
+    "        0xED9C3522,  # 1\n",
+    "        0x2ED9C352,  # 2\n",
+    "        0x22ED9C35,  # 3\n",
+    "        0x522ED9C3,  # 4\n",
+    "        0x3522ED9C,  # 5\n",
+    "        0xC3522ED9,  # 6\n",
+    "        0x9C3522ED,  # 7\n",
+    "        0x8C96077B,  # 8\n",
+    "        0xB8C96077,  # 9\n",
+    "        0x7B8C9607,  # A\n",
+    "        0x77B8C960,  # B\n",
+    "        0x077B8C96,  # C\n",
+    "        0x6077B8C9,  # D\n",
+    "        0x96077B8C,  # E\n",
+    "        0xC96077B8,  # F\n",
+    "    ],\n",
+    "    dtype=np.uint32,\n",
+    ")\n",
+    "\n",
+    "chips = map_nibbles_to_chips(packet, chip_mapping, return_string=False)\n",
+    "print([hex(byte) for byte in chips])\n",
+    "\n",
+    "\n",
+    "# def binary_string_to_bit_array(binary_string: str) -> np.ndarray:\n",
+    "#     \"\"\"Receives string of bits like '10101111_01110010' and converts it into a np.array\"\"\"\n",
+    "#     return np.array([int(bit) for bit in binary_string if bit in \"01\"], dtype=np.uint8)\n",
+    "\n",
+    "\n",
+    "# print(binary_string_to_bit_array(chips))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chips -> (I_chips, Q_chips)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I_chips: [1 0 1 0 1 0 0 1 0 0 0 1 0 1 1 1]\n",
+      "Q_chips: [1 1 0 1 1 0 0 1 1 1 0 0 0 0 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage:\n",
+    "I_chips, Q_chips = split_iq_chips(chips[:1])\n",
+    "\n",
+    "print(\"I_chips:\", I_chips)\n",
+    "print(\"Q_chips:\", Q_chips)"
    ]
   },
   {
@@ -73,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +185,7 @@
     "\n",
     "# Generate the half-sine pulse\n",
     "half_sine_pulse = np.sin(np.linspace(0, np.pi, sps + 1))\n",
+    "hss_modulated_data = pulse_shape_bits_fir(bits, fir_taps=half_sine_pulse, sps=sps)\n",
     "\n",
     "# Plot the pulse\n",
     "plt.figure()\n",
@@ -113,9 +196,6 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "hss_modulated_data = pulse_shape_bits_fir(bits, fir_taps=half_sine_pulse, sps=sps)\n",
-    "\n",
-    "# -------------------------\n",
     "# Plot the modulated data\n",
     "plt.figure(figsize=(10, 4))\n",
     "plt.plot(hss_modulated_data, marker=\"o\", linestyle=\"-\")\n",
@@ -126,6 +206,13 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
