--- a/python_phy/ble_modulation_prototype.ipynb
+++ b/python_phy/ble_modulation_prototype.ipynb
@@ -11,9 +11,8 @@
     "import scipy\n",
     "\n",
     "from packet_utils import generate_access_code_ble, create_ble_phy_packet, unpack_uint8_to_bits\n",
-    "from filters import gaussian_fir_taps\n",
     "from demodulation import demodulate_frequency\n",
-    "from modulation import pulse_shape_bits_fir, modulate_frequency\n",
+    "from modulation import pulse_shape_bits_fir, modulate_frequency, gaussian_fir_taps\n",
     "from transmitter import TransmitterBLE\n",
     "from receiver import ReceiverBLE\n",
     "\n",
