Receiver classes: change Butterworth -> matched filter

--- a/python_phy/802154_modulation_prototype.ipynb
+++ b/python_phy/802154_modulation_prototype.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
     "class_bits = transmitter.process_phy_payload(class_payload)\n",
     "class_modulated = transmitter.modulate(class_bits, zero_padding=500)\n",
     "\n",
-    "receiver = Receiver802154(fs=fs, decimation=1)\n",
+    "receiver = Receiver802154(fs=fs)\n",
     "received_bit_samples = receiver.demodulate(class_modulated)\n",
     "received_packet = receiver.process_phy_packet(received_bit_samples)\n",
     "print(received_packet)\n",
