--- a/python_phy/subtraction_test.ipynb
+++ b/python_phy/subtraction_test.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -50,13 +50,12 @@
    "source": [
     "filename: str = \"BLE_0dBm.dat\"\n",
     "fs: int | float = 10e6  # Hz\n",
-    "decimation: int = 1\n",
     "\n",
     "# Open file\n",
     "iq_samples = read_iq_data(f\"../capture_nRF/data/new/{filename}\")\n",
     "\n",
     "# Initialise the receiver and process data\n",
-    "receiver = ReceiverBLE(fs=fs, decimation=decimation)\n",
+    "receiver = ReceiverBLE(fs=fs)\n",
     "bit_samples = receiver.demodulate(iq_samples)  # From IQ samples to hard decisions\n",
     "reference_packet: list[dict] = receiver.process_phy_packet(bit_samples)  # From hard decisions to packets\n",
     "reference_packet: dict = reference_packet[0]\n",
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +100,7 @@
     "iq_samples = read_iq_data(f\"../capture_nRF/data/new/{filename}\")  # Open file\n",
     "\n",
     "# Initialise the receiver and process data\n",
-    "receiver = ReceiverBLE(fs=fs, decimation=decimation)\n",
+    "receiver = ReceiverBLE(fs=fs)\n",
     "bit_samples = receiver.demodulate(iq_samples)  # From IQ samples to hard decisions\n",
     "interfered_packet: list[dict] = receiver.process_phy_packet(bit_samples)  # From hard decisions to packets\n",
     "interfered_packet: dict = interfered_packet[0]\n",
@@ -321,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +353,7 @@
     "subplots_iq([iq_samples, ready_to_subtract, subtracted], fs, [\"Interfered packet\", \"Interference\", \"Subtracted\"])\n",
     "\n",
     "# Initialise the receiver and process data\n",
-    "receiver = ReceiverBLE(fs=fs, decimation=decimation)\n",
+    "receiver = ReceiverBLE(fs=fs)\n",
     "bit_samples = receiver.demodulate(subtracted)  # From IQ samples to hard decisions\n",
     "reference_packet: list[dict] = receiver.process_phy_packet(bit_samples)  # From hard decisions to packets\n",
     "if reference_packet:\n",
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +412,7 @@
     "subplots_iq([iq_samples, ready_to_subtract, subtracted], fs, [\"Interfered packet\", \"Interference\", \"Subtracted\"])\n",
     "\n",
     "# Initialise the receiver and process data\n",
-    "receiver = ReceiverBLE(fs=fs, decimation=decimation)\n",
+    "receiver = ReceiverBLE(fs=fs)\n",
     "bit_samples = receiver.demodulate(subtracted)  # From IQ samples to hard decisions\n",
     "reference_packet: list[dict] = receiver.process_phy_packet(bit_samples)  # From hard decisions to packets\n",
     "if reference_packet:\n",
