checking AWGN power and Parseval theorem for discrete data

--- a/python_phy/802154_matched_filter_prototype.ipynb
+++ b/python_phy/802154_matched_filter_prototype.ipynb
@@ -90,6 +90,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Checking AWGN function power and Parseval theorem for discrete data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Noise dBW: 100.02742460482933\n",
+      "Noise W: 10063347286.854416\n",
+      "parseval_1 = 10063347286.854416\n",
+      "parseval_2 = 10063347286.854416\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print to check AWGN function is working correctly\n",
+    "noise = add_white_gaussian_noise(np.zeros(10000, np.complex64), noise_power=100)\n",
+    "print(10 * np.log10(np.real(np.mean(noise * np.conjugate(noise)))))\n",
+    "\n",
+    "fouriery_2 = np.fft.fft(noise)\n",
+    "N = len(noise)\n",
+    "parseval_1 = np.real(np.sum(noise * np.conj(noise)))\n",
+    "parseval_2 = np.sum(np.abs(fouriery_2) ** 2) / N\n",
+    "print(parseval_1)\n",
+    "print(parseval_2)\n",
+    "print(np.real(parseval_1 - parseval_2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Demodulation process at receiver\n",
     "Applying HSS matched filtering before frequency demodulating and rectanguar FIR filtering after frequency demodulating yields best results"
    ]
