move Jupyter notebooks into new folder

--- a/python_phy/jupyter_notebooks/802154_matched_filter_prototype.ipynb
+++ b/python_phy/jupyter_notebooks/802154_matched_filter_prototype.ipynb
@@ -2,16 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %matplotlib widget\n",
     "\n",
+    "import sys\n",
+    "import os\n",
     "import numpy as np\n",
     "import scipy\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
     "from receiver import Receiver802154\n",
     "from filters import add_awgn_band_limited\n",
     "from demodulation import demodulate_frequency, symbol_sync, binary_slicer\n",
@@ -19,6 +22,7 @@
     "from visualisation import plot_complex_time, plot_periodograms, plot_payload\n",
     "from modulation import half_sine_fir_taps\n",
     "from packet_utils import preamble_detection_802154, correlate_access_code, map_nibbles_to_chips\n",
+    "\n",
     "\n",
     "plt.close(\"all\")"
    ]
