--- a/python_phy/jupyter_notebooks/802154_modulation_prototype.ipynb
+++ b/python_phy/jupyter_notebooks/802154_modulation_prototype.ipynb
@@ -2,24 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy\n",
     "\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
     "from packet_utils import create_802154_phy_packet, map_nibbles_to_chips, split_iq_chips\n",
     "from modulation import oqpsk_modulate, half_sine_fir_taps\n",
     "from transmitter import Transmitter802154\n",
-    "from receiver import Receiver802154\n",
-    "\n",
-    "# IEEE 802.15.4\n",
-    "# payload -> packet (bytes) DONE\n",
-    "# bytes -> chips DONE\n",
-    "# bits -> IQ DONE\n",
-    "# Encapsulate the process in a class"
+    "from receiver import Receiver802154"
    ]
   },
   {
