--- a/python_phy/jupyter_notebooks/ble_modulation_prototype.ipynb
+++ b/python_phy/jupyter_notebooks/ble_modulation_prototype.ipynb
@@ -2,25 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy\n",
     "\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
     "from packet_utils import generate_access_code_ble, create_ble_phy_packet, unpack_uint8_to_bits\n",
     "from demodulation import demodulate_frequency\n",
     "from modulation import pulse_shape_bits_fir, modulate_frequency, gaussian_fir_taps\n",
     "from transmitter import TransmitterBLE\n",
-    "from receiver import ReceiverBLE\n",
-    "\n",
-    "# BLE\n",
-    "# payload -> packet (bytes)(whitened) DONE\n",
-    "# bytes -> bits DONE\n",
-    "# bits -> IQ DONE\n",
-    "# Encapsulate the process in a class DONE"
+    "from receiver import ReceiverBLE"
    ]
   },
   {
