--- a/python_phy/jupyter_notebooks/subtraction_test.ipynb
+++ b/python_phy/jupyter_notebooks/subtraction_test.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %matplotlib widget\n",
     "\n",
+    "import sys\n",
+    "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
     "from data_io import read_iq_data\n",
     "from visualisation import plot_payload, compare_bits_with_reference, subplots_iq, plot_ber_vs_frequency_offset\n",
     "from receiver import ReceiverBLE, Receiver802154\n",
