--- a/python_phy/jupyter_notebooks/ble_matched_filter_prototype.ipynb
+++ b/python_phy/jupyter_notebooks/ble_matched_filter_prototype.ipynb
@@ -2,22 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %matplotlib widget\n",
     "\n",
+    "import sys\n",
+    "import os\n",
     "import numpy as np\n",
     "import scipy\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
     "from receiver import ReceiverBLE\n",
     "from filters import add_awgn_band_limited, decimating_fir_filter, single_pole_iir_filter\n",
     "from demodulation import demodulate_frequency, symbol_sync, binary_slicer\n",
     "from data_io import read_iq_data\n",
     "from visualisation import plot_complex_time, plot_periodograms, plot_payload\n",
     "from modulation import gaussian_fir_taps\n",
+    "\n",
     "\n",
     "plt.close(\"all\")"
    ]
