move compare_bits_with_reference() from visualisation to interference_utils

--- a/python_phy/jupyter_notebooks/subtraction_test.ipynb
+++ b/python_phy/jupyter_notebooks/subtraction_test.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
     "from data_io import read_iq_data\n",
-    "from visualisation import plot_payload, compare_bits_with_reference, subplots_iq, plot_ber_vs_frequency_offset\n",
+    "from visualisation import plot_payload, subplots_iq, plot_ber_vs_frequency_offset\n",
     "from receiver import ReceiverBLE, Receiver802154\n",
     "from interference_utils import (\n",
     "    multiply_by_complex_exponential,\n",
@@ -23,6 +23,7 @@
     "    correlation_wrapper,\n",
     "    subtract_interference_wrapper,\n",
     "    compute_ber_vs_frequency,\n",
+    "    compare_bits_with_reference,\n",
     ")"
    ]
   },
