matched filter ipynb: correct file relative path

--- a/python_phy/jupyter_notebooks/802154_matched_filter_prototype.ipynb
+++ b/python_phy/jupyter_notebooks/802154_matched_filter_prototype.ipynb
@@ -66,7 +66,7 @@
     "samples_per_symbol = 2 * samples_per_chip\n",
     "Rb = fs / samples_per_chip  # Baud rate\n",
     "filename = \"802154_0dBm.dat\"  # Open BLE file\n",
-    "iq_samples = read_iq_data(f\"../capture_nRF/data/new/{filename}\")\n",
+    "iq_samples = read_iq_data(f\"../../capture_nRF/data/new/{filename}\")\n",
     "fsk_deviation_802154: float = 500e3  # Hz, when interpreting HSS O-QPSK as MSK\n",
     "\n",
     "desired_SNR = 10  # dB\n",
