--- a/python_phy/jupyter_notebooks/ble_matched_filter_prototype.ipynb
+++ b/python_phy/jupyter_notebooks/ble_matched_filter_prototype.ipynb
@@ -64,7 +64,7 @@
     "sps = 10\n",
     "Rb = fs / sps  # Baud rate\n",
     "filename = \"BLE_0dBm.dat\"  # Open BLE file\n",
-    "iq_samples = read_iq_data(f\"../capture_nRF/data/new/{filename}\")\n",
+    "iq_samples = read_iq_data(f\"../../capture_nRF/data/new/{filename}\")\n",
     "fsk_deviation_ble: float = 250e3  # Hz\n",
     "\n",
     "desired_SNR = 10  # dB\n",
