rename pdr analysis

--- a/python_phy/jupyter_notebooks/ble_pdr_analysis.ipynb
+++ b/python_phy/jupyter_notebooks/ble_pdr_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,43 +17,10 @@
     "\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
     "from data_io import read_iq_data\n",
-    "from visualisation import PDRPlotter\n",
+    "from visualisation import PDRPlotter, load_and_plot_pkl_data\n",
     "from interference_utils import pdr_vs_snr_analysis_parallel\n",
     "from receiver import ReceiverType, DemodulationType\n",
-    "from demodulation import TEDType\n",
-    "\n",
-    "\n",
-    "def load_and_plot_pkl_data(title=\"PDR vs SNR Analysis\"):\n",
-    "    \"\"\"Loads all .pkl files in the current directory and generates a plot\".\"\"\"\n",
-    "    # Get all .pkl files in the current directory\n",
-    "    pkl_files = [f for f in os.listdir() if f.endswith(\".pkl\")]\n",
-    "\n",
-    "    # Load each .pkl file into a dictionary\n",
-    "    data = {}\n",
-    "    for file in pkl_files:\n",
-    "        with open(file, \"rb\") as f:\n",
-    "            data[file] = pickle.load(f)\n",
-    "\n",
-    "    # Define plotting parameters\n",
-    "    colours = [\"blue\", \"red\", \"green\", \"purple\", \"orange\", \"brown\", \"pink\", \"gray\", \"cyan\", \"magenta\"]\n",
-    "    linestyles = [\"-\", \"--\", \"-.\", \":\"]\n",
-    "    markers = [\"o\", \"s\", \"D\", \"^\", \"v\", \"<\", \">\", \"p\", \"*\", \"X\"]\n",
-    "\n",
-    "    # Create an instance of PDRPlotter\n",
-    "    plotter = PDRPlotter()\n",
-    "\n",
-    "    # Add each data trace to the plotter with random styles\n",
-    "    for filename, values in data.items():\n",
-    "        plotter.add_trace(\n",
-    "            values,\n",
-    "            filename,\n",
-    "            colour=random.choice(colours),\n",
-    "            linestyle=random.choice(linestyles),\n",
-    "            marker=random.choice(markers),\n",
-    "        )\n",
-    "\n",
-    "    # Plot the data\n",
-    "    plotter.plot(title=title)"
+    "from demodulation import TEDType"
    ]
   },
   {
@@ -69,30 +36,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames: dict = {\"BLE\": \"BLE_0dBm.dat\", \"IEEE802154\": \"802154_0dBm.dat\"}  # Open BLE file\n",
-    "\n",
     "fs = 10e6  # Hz\n",
+    "folder = \"data_pdr\"\n",
+    "filenames: dict = {\"BLE\": \"BLE_0dBm.dat\", \"IEEE802154\": \"802154_0dBm.dat\"}  # Open BLE file\n",
     "receiver_type: ReceiverType = \"BLE\"\n",
-    "iq_samples: np.ndarray = read_iq_data(f\"../../capture_nRF/data/new/{filenames[receiver_type]}\")\n",
     "signal_present = (4000, 14000) if receiver_type == \"BLE\" else (8000, 35000)\n",
+    "iq_samples: np.ndarray = read_iq_data(f\"../../capture_nRF/data/new/{filenames[receiver_type]}\")\n",
     "\n",
     "demodulation_type: DemodulationType = \"BAND_PASS\"\n",
-    "ted_type: TEDType = \"MOD_MUELLER_AND_MULLER\"\n",
-    "\n",
+    "ted_types: list[TEDType] = [\n",
+    "    \"MOD_MUELLER_AND_MULLER\",\n",
+    "]\n",
     "snr_range = range(0, 10, 1)\n",
     "noise_realisations = int(1e4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ted_types: list[TEDType] = [\n",
-    "    \"MOD_MUELLER_AND_MULLER\",\n",
-    "]\n",
-    "\n",
     "pdr = []\n",
     "\n",
     "for ted in ted_types:\n",
@@ -107,14 +71,14 @@
     "        noise_realisations=noise_realisations,\n",
     "    )\n",
     "    pdr.append(result)\n",
-    "    filename = f\"band_pass_{ted}_new_snr.pkl\"\n",
+    "    filename = f\"{folder}/{receiver_type}_band_pass_{ted}.pkl\"\n",
     "    with open(filename, \"wb\") as file:\n",
     "        pickle.dump(result, file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -129,18 +93,14 @@
     }
    ],
    "source": [
-    "ted_types: list[TEDType] = [\n",
-    "    \"MOD_MUELLER_AND_MULLER\",\n",
-    "]\n",
-    "\n",
     "opened_files = []\n",
     "# Instantaneous frquency\n",
     "for ted in ted_types:\n",
-    "    with open(f\"before_iir_simple_squelch_{ted}_new_snr.pkl\", \"rb\") as f:\n",
+    "    with open(f\"{folder}/{receiver_type}_before_iir_simple_squelch_{ted}.pkl\", \"rb\") as f:\n",
     "        opened_files.append(pickle.load(f))\n",
     "\n",
     "# Band pass\n",
-    "with open(\"band_pass_MOD_MUELLER_AND_MULLER_new_snr.pkl\", \"rb\") as f:\n",
+    "with open(f\"{folder}/{receiver_type}_band_pass_MOD_MUELLER_AND_MULLER.pkl\", \"rb\") as f:\n",
     "    band_pass = pickle.load(f)\n",
     "\n",
     "markers = [\"o\", \"s\", \"D\", \"^\", \"v\", \"<\", \">\", \"p\", \"*\", \"X\"]\n",
@@ -158,22 +118,6 @@
     "    band_pass, f\"Band-Pass matched filtering, {'MOD_MUELLER_AND_MULLER'} TED\", colour=\"blue\", linestyle=\"-\", marker=\"s\"\n",
     ")\n",
     "plotter.plot(title=\"BLE GFSK demodulation comparison\", figsize=(16, 4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load_and_plot_pkl_data()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# IEEE 802.15.4 example "
    ]
   }
  ],
